--- a/source/index.hbs
+++ b/source/index.hbs
@@ -1,37 +1,20 @@
 <div class="row">
-  {{#each posts}}
-  <div class="col-xs-12 col-sm-3 mb-4 d-flex align-items-stretch">
-    <div class="card shadow-sm">
-      <div class="card-body">
-        <p class="card-text">
-          <h2>
-            <a href="/{{this.permalink}}">{{this.title}}</a> 
-          </h2>
-          {{this.summary}}
-        </p>
-        <div class="d-flex justify-content-between align-items-center">
-          <a class="btn btn-outline-secondary" href="/{{this.permalink}}">Read more..</a>
-        </div>
-      </div>
+  <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+    <div class="position-sticky pt-3">
+      <ul class="nav flex-column">
+        {{#each postList}}
+        <li class="nav-item">
+          <a class="nav-link" href="/{{this.permalink}}">
+            {{this.title}}
+          </a>
+        </li>
+        {{/each}}
+      </ul>
     </div>
-  </div>
-  {{/each}}
+  </nav>
+
+  <main class="col-md-9 ms-sm-auto col-lg-10 mt-3 px-md-4"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
+    <h1>{{posts.1.title}}</h1>
+    {{{posts.1.body}}}
+  </main>
 </div>
-{{!-- Pagination --}}
-{{#if meta.config.pagination}}
-{{#if shouldPaginate}}
-<div class="row">
-  <div class="col-xs-12 col-sm-12 mb-4 text-center">
-    <p class="text-muted">Page {{page}} of {{pages}}</p>
-    <div class="btn-group" role="group">
-    {{#if prevPage }}
-        <a href="/page/{{prevPage}}" class="btn btn-outline-secondary">&laquo; Prev Page</a>
-    {{/if}}
-    {{#if nextPage }}
-        <a href="/page/{{nextPage}}" class="btn btn-outline-secondary">Next Page &raquo;</a>
-    {{/if}}
-    </div>
-  </div>
-</div>
-{{/if}}
-{{/if}}
