--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -49,7 +49,7 @@
     <script src="/content/javascripts/site{{meta.config.fileEnv}}.js"></script>
   </head>
   <body>
-    <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white border-bottom">
         <div class="h4 my-0 me-md-auto brand">
           <a class="navbar-brand" href="/">
               <img src="/content/images/squido.svg" alt="" width="70" height="70" class="d-inline-block align-text-top">squido
@@ -60,12 +60,12 @@
             <a class="p-2 text-dark" href="/about">About</a>
         </nav>
     </header>
-    <main class="container">
+    <main class="container-fluid">
       {{{body}}}
     </main>
     <footer class="footer mt-5 py-3 bg-light">
         <div class="container text-center">
-            <span class="text-muted">{{meta.config.name}}</span>
+            <span class="text-muted">squido</span>
         </div>
     </footer>
   </body>
