--- a/source/post.hbs
+++ b/source/post.hbs
@@ -1,18 +1,30 @@
 <div class="row">
-    <div class="col-md-8 offset-md-2 mb-5">
-        <div class="mt-5">
-            <h1>{{title}}</h1>
-            {{{body}}}
+  <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+    <div class="position-sticky pt-3">
+      <ul class="nav flex-column">
+        {{#each postList}}
+        <li class="nav-item">
+          <a class="nav-link" href="/{{this.permalink}}">
+            {{this.title}}
+          </a>
+        </li>
+        {{/each}}
+      </ul>
+    </div>
+  </nav>
+
+  <main class="col-md-9 ms-sm-auto col-lg-10 mt-3 px-md-4"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
+    <h1>{{title}}</h1>
+    {{{body}}}
+    {{#if tags}}
+    <div class="row">
+        <div class="col-md-8 offset-md-2 mb-5">
+            <h5 class="text-muted">Tags:</h5>
+            {{#each tags}}
+            <a href="/tag/{{this}}">{{this}}</a> |
+            {{/each}}
         </div>
     </div>
+    {{/if}}
+  </main>
 </div>
-{{#if tags}}
-<div class="row">
-    <div class="col-md-8 offset-md-2 mb-5">
-        <h5 class="text-muted">Tags:</h5>
-        {{#each tags}}
-        <a href="/tag/{{this}}">{{this}}</a> |
-        {{/each}}
-    </div>
-</div>
-{{/if}}
