--- a/source/index.hbs
+++ b/source/index.hbs
@@ -12,9 +12,8 @@
       </ul>
     </div>
   </nav>
-
-  <main class="col-md-9 ms-sm-auto col-lg-10 mt-3 px-md-4"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
-    <h1>{{posts.1.title}}</h1>
-    {{{posts.1.body}}}
+  <main class="col-md-9 ms-sm-auto col-lg-10 mt-3 px-md-4">
+    <h1>{{post.title}}</h1>
+    {{{post.body}}}
   </main>
 </div>
