--- a/source/post.hbs
+++ b/source/post.hbs
@@ -13,18 +13,18 @@
     </div>
   </nav>
 
-  <main class="col-md-9 ms-sm-auto col-lg-10 mt-3 px-md-4"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
+  <main class="col-md-9 ms-sm-auto col-lg-10 mt-3 px-md-4">
     <h1>{{title}}</h1>
     {{{body}}}
     {{#if tags}}
     <div class="row">
-        <div class="col-md-8 offset-md-2 mb-5">
-            <h5 class="text-muted">Tags:</h5>
-            {{#each tags}}
-            <a href="/tag/{{this}}">{{this}}</a> |
-            {{/each}}
-        </div>
+      <div class="col-md-12 mt-3 mb-3">
+        <h5 class="text-muted">Tags:</h5>
+        {{#each tags}}
+        <a href="/tag/{{this}}">{{this}}</a> |
+        {{/each}}
+      </div>
     </div>
-    {{/if}}
+  {{/if}}
   </main>
 </div>
