--- a/source/content/stylesheets/style.css
+++ b/source/content/stylesheets/style.css
@@ -1,13 +1,3 @@
-html {
-    position: relative;
-    min-height: 100%;
-}
-
-body{
-    color: #454545 !important;
-    margin-bottom: 80px;
-}
-
 a{
     color: #F95A77 !important;
     text-decoration: none !important;
@@ -34,42 +24,17 @@ a:hover{
     border-color: #FF96A9 !important;
 }
 
-.jumbo-title {
-    margin-top: 50px;
-    font-size: 5.5rem;
-    font-weight: 700;
-}
-
-.jumbo-subtitle {
-    font-size: 3.0rem;
-    font-weight: 700;
-}
-
-.article-title {
-    font-size: 2.8rem;
-    font-weight: 700;
-}
-
 h1, h2{
     color: #264653 !important;
     font-weight: 700; 
 }
 
-.brand a{
+.brand{
     color: #264653 !important;
     font-size: 2.8rem !important;
     font-weight: 700 !important;
 }
 
-main > .container {
-    padding: 60px 15px 0;
-}
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 80px;
-    line-height: 50px; /* Vertically center the text there */
-    background-color: #f5f5f5;
+.sidebar{
+    border-right: 1px solid #dee2e6;
 }
