--- a/source/content/stylesheets/syntax.css
+++ b/source/content/stylesheets/syntax.css
@@ -15,6 +15,7 @@
 pre {
     padding: 15px;
     background: #f8f9fa;
+    border: 1px solid #dee2e6;
 }
 
 .hljs-builtin-name, .hljs-doctag, .hljs-keyword, .hljs-meta-keyword, .hljs-template-tag, .hljs-template-variable, .hljs-type {
