--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -49,6 +49,13 @@
     <link rel="stylesheet" href="/content/stylesheets/syntax{{meta.config.fileEnv}}.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/js/bootstrap.min.js" integrity="sha512-mp3VeMpuFKbgxm/XMUU4QQUcJX4AZfV5esgX72JQr7H7zWusV6lLP1S78wZnX2z9dwvywil1VHkHZAqfGOW7Nw==" crossorigin="anonymous"></script>
     <script src="/content/javascripts/site{{meta.config.fileEnv}}.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MSPNVB6V98"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-MSPNVB6V98');
+    </script>
   </head>
   <body>
     <header class="navbar navbar-light bg-light flex-md-nowrap p-0 border-bottom">
