--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -50,11 +50,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/js/bootstrap.min.js" integrity="sha512-mp3VeMpuFKbgxm/XMUU4QQUcJX4AZfV5esgX72JQr7H7zWusV6lLP1S78wZnX2z9dwvywil1VHkHZAqfGOW7Nw==" crossorigin="anonymous"></script>
     <script src="/content/javascripts/site{{meta.config.fileEnv}}.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MSPNVB6V98"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PP24Z0K44V"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-MSPNVB6V98');
+      gtag('config', 'G-PP24Z0K44V');
     </script>
   </head>
   <body>
