Fixed config object

--- a/source/page.hbs
+++ b/source/page.hbs
@@ -18,7 +18,7 @@
   {{/each}}
 </div>
 {{!-- Pagination --}}
-{{#if meta.config.pagination}}
+{{#if config.pagination}}
 {{#if shouldPaginate}}
 <div class="row">
   <div class="col-xs-12 col-sm-12 mb-4 text-center">
