--- a/source/tag.hbs
+++ b/source/tag.hbs
@@ -9,6 +9,11 @@
           </a>
         </li>
         {{/each}}
+        <li class="nav-item p-3" style="width: 120px;">
+          <a href="https://www.netlify.com">
+            <img src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg" alt="Deploys by Netlify" />
+          </a>
+        </li>
       </ul>
     </div>
   </nav>
