--- a/source/post.hbs
+++ b/source/post.hbs
@@ -11,7 +11,7 @@
         {{/each}}
         <li class="nav-item p-3" style="width: 120px;">
           <a href="https://www.netlify.com">
-            <img src="https://www.netlify.com/img/global/badges/netlify-color-accent.svg" alt="Deploys by Netlify" />
+            <img src="/content/images/netlify-color-accent.svg" alt="Deploys by Netlify" />
           </a>
         </li>
       </ul>
