Removed mini flag

--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="/content/stylesheets/syntax{{config.fileEnv}}.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/js/bootstrap.min.js" integrity="sha512-mp3VeMpuFKbgxm/XMUU4QQUcJX4AZfV5esgX72JQr7H7zWusV6lLP1S78wZnX2z9dwvywil1VHkHZAqfGOW7Nw==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FlexSearch/0.6.22/flexsearch.min.js" integrity="sha512-KxRyF5OGyocY7+bOecICRkukb/F8P8yFO/86j3TZ8zxzL5nieFBJFFk0sd5aj387UfSOcSan4FJ86+ydH50nsw==" crossorigin="anonymous"></script>
-    <script src="/content/javascripts/searchdata{{config.fileEnv}}.js"></script>
+    <script src="/content/javascripts/searchdata.js"></script>
     <script src="/content/javascripts/site{{config.fileEnv}}.js"></script>
     <meta name="google-site-verification" content="VRUmulyJTSQAk3Lm2xSNlu4kDy9L7jCi6qNZoBh1tMw" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6030VR849K"></script>
