Small layout fixes

--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -20,7 +20,7 @@
     <meta name="twitter:description" value="{{config.name}} - Page: {{page}}" />
     {{/if}}
     {{#if tag}}
-    <title>{{config.name}}1 - Tag: {{tag}}</title>
+    <title>{{config.name}} - Tag: {{tag}}</title>
     <meta property="og:title" content="{{config.name}} - Tag: {{tag}}" />
     <meta name="twitter:title" value="{{config.name}} - Tag: {{tag}}" />
     <meta name="description" itemprop="description" content="{{config.name}} - Posts containing tag: {{tag}}" />
