--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -57,12 +57,12 @@
     <script src="/content/javascripts/searchdata.js"></script>
     <script src="/content/javascripts/site{{config.fileEnv}}.js"></script>
     <meta name="google-site-verification" content="VRUmulyJTSQAk3Lm2xSNlu4kDy9L7jCi6qNZoBh1tMw" />
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6030VR849K"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-7038832-48"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-6030VR849K');
+      gtag('config', 'UA-7038832-48');
     </script>
   </head>
   <body>
