Fixed some trailing slashes on URLs

--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -31,10 +31,10 @@
     <link rel="canonical" href="{{meta.url}}/" />
     <link rel="icon" type="image/png" href="/content/images/favicon.png" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="{{meta.url}}" />
+    <meta property="og:url" content="{{meta.url}}/" />
     <meta property="og:site_name" content="{{config.name}}" />
     <meta name="twitter:card" value="summary" />
-    <meta name="twitter:url" value="{{meta.url}}" />
+    <meta name="twitter:url" value="{{meta.url}}/" />
     {{#if meta.image}}
     <meta name="twitter:image" value="{{meta.image}}" />
     <meta property="og:image" content="{{meta.image}}" />
