--- a/source/page.hbs
+++ b/source/page.hbs
@@ -25,10 +25,10 @@
     <p class="text-muted">Page {{page}} of {{pages}}</p>
     <div class="btn-group" role="group">
     {{#if prevPage }}
-        <a href="/page/{{prevPage}}" class="btn btn-outline-secondary">&laquo; Prev Page</a>
+        <a href="/page/{{prevPage}}/" class="btn btn-outline-secondary">&laquo; Prev Page</a>
     {{/if}}
     {{#if nextPage }}
-        <a href="/page/{{nextPage}}" class="btn btn-outline-secondary">Next Page &raquo;</a>
+        <a href="/page/{{nextPage}}/" class="btn btn-outline-secondary">Next Page &raquo;</a>
     {{/if}}
     </div>
   </div>
