--- a/source/post.hbs
+++ b/source/post.hbs
@@ -29,7 +29,7 @@
       <div class="col-md-12 mt-3 mb-3">
         <h5 class="text-muted">Tags:</h5>
         {{#each tags}}
-        <a href="/tag/{{this}}">{{this}}</a> |
+        <a href="/tag/{{this}}/">{{this}}</a> |
         {{/each}}
       </div>
     </div>
