Fixing trailing slashes

--- a/source/index.hbs
+++ b/source/index.hbs
@@ -8,7 +8,7 @@
         </li>
         {{#each postList}}
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/{{this.permalink}}">
+          <a class="nav-link" aria-current="page" href="/{{this.permalink}}/">
             {{this.title}}
           </a>
         </li>
