--- a/source/tag.hbs
+++ b/source/tag.hbs
@@ -8,7 +8,7 @@
         </li>
         {{#each postList}}
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/{{this.permalink}}">
+          <a class="nav-link" aria-current="page" href="/{{this.permalink}}/">
             {{this.title}}
           </a>
         </li>
@@ -26,7 +26,7 @@
     {{#each posts}}
     <div class="col-xs-12 col-sm-12 mb-4 d-flex align-items-stretch">
       <h3>
-        <a href="/{{this.permalink}}">{{this.title}}</a> 
+        <a href="/{{this.permalink}}/">{{this.title}}</a> 
       </h3>
     </div>
     {{/each}}
