--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -46,6 +46,7 @@
     <meta name="twitter:site" value="{{config.twitterHandle}}" />
     <meta name="twitter:creator" content="{{config.twitterHandle}}" />
     {{/if}}
+    <meta name="fb:app_id" content="{{config.facebookApp}}" />
     <link rel="alternate" type="application/rss+xml" href="{{config.baseUrl}}/rss" />
     <link rel="alternate" type="application/atom+xml" href="{{config.baseUrl}}/atom" />
     <link rel="alternate" type="application/json" href="{{config.baseUrl}}/json" />
