--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -46,7 +46,9 @@
     <meta name="twitter:site" value="{{config.twitterHandle}}" />
     <meta name="twitter:creator" content="{{config.twitterHandle}}" />
     {{/if}}
+    {{#if config.facebookApp}}
     <meta name="fb:app_id" content="{{config.facebookApp}}" />
+    {{/if}}
     <link rel="alternate" type="application/rss+xml" href="{{config.baseUrl}}/rss" />
     <link rel="alternate" type="application/atom+xml" href="{{config.baseUrl}}/atom" />
     <link rel="alternate" type="application/json" href="{{config.baseUrl}}/json" />
