--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -47,7 +47,7 @@
     <meta name="twitter:creator" content="{{config.twitterHandle}}" />
     {{/if}}
     {{#if config.facebookApp}}
-    <meta name="fb:app_id" content="{{config.facebookApp}}" />
+    <meta property="fb:app_id" content="{{config.facebookApp}}" />
     {{/if}}
     <link rel="alternate" type="application/rss+xml" href="{{config.baseUrl}}/rss" />
     <link rel="alternate" type="application/atom+xml" href="{{config.baseUrl}}/atom" />
