Removed trailing slash

--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -28,7 +28,7 @@
     <meta name="twitter:description" value="{{config.name}} - Posts containing tag: {{tag}}" />
     {{/if}}
     {{/if}}
-    <link rel="canonical" href="{{meta.url}}/" />
+    <link rel="canonical" href="{{meta.url}}" />
     <link rel="icon" type="image/png" href="/content/images/favicon.png" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="{{meta.url}}/" />
