Absolute link to favicon

--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -29,7 +29,7 @@
     {{/if}}
     {{/if}}
     <link rel="canonical" href="{{meta.url}}" />
-    <link rel="icon" type="image/png" href="/content/images/favicon.png" />
+    <link rel="icon" type="image/png" href="{{config.baseUrl}}/content/images/favicon.png" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="{{meta.url}}" />
     <meta property="og:site_name" content="{{config.name}}" />
