--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -55,6 +55,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/css/bootstrap.min.css" integrity="sha512-N415hCJJdJx+1UBfULt+i+ihvOn42V/kOjOpp1UTh4CZ70Hx5bDlKryWaqEKfY/8EYOu/C2MuyaluJryK1Lb5Q==" crossorigin="anonymous" />
     <link rel="stylesheet" href="/content/stylesheets/style{{config.fileEnv}}.css">
     <link rel="stylesheet" href="/content/stylesheets/syntax{{config.fileEnv}}.css">
+    <link rel="stylesheet" href="https://cdn.lineicons.com/3.0/lineicons.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta3/js/bootstrap.min.js" integrity="sha512-mp3VeMpuFKbgxm/XMUU4QQUcJX4AZfV5esgX72JQr7H7zWusV6lLP1S78wZnX2z9dwvywil1VHkHZAqfGOW7Nw==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FlexSearch/0.6.22/flexsearch.min.js" integrity="sha512-KxRyF5OGyocY7+bOecICRkukb/F8P8yFO/86j3TZ8zxzL5nieFBJFFk0sd5aj387UfSOcSan4FJ86+ydH50nsw==" crossorigin="anonymous"></script>
     <script src="/content/javascripts/searchdata.js"></script>
@@ -83,7 +84,10 @@
           </a>
         </li>
         <li class="nav-item p-2 d-none d-sm-block"><a href="/" class="nav-link btn-outline-secondary">Home</a></li>
-        <li class="nav-item p-2 d-none d-sm-block"><a target="_blank" href="https://github.com/mrvautin/squido" class="nav-link btn-outline-secondary">Github</a></li>
+        <li class="nav-item p-2 d-none d-sm-block"><a href="https://squido.org/blog/" target="_blank" class="nav-link btn-outline-secondary">Blog</a></li>
+        <li class="nav-item p-2 d-none d-sm-block"><a class="nav-link btn-outline-secondary" target="_blank" href="https://www.facebook.com/squido.org"><i class="lni lni-facebook-original"></i></a></li>
+        <li class="nav-item p-2 d-none d-sm-block"><a class="nav-link btn-outline-secondary" target="_blank" href="https://twitter.com/squido_app"><i class="lni lni-twitter-filled"></i></a></li>
+        <li class="nav-item p-2 d-none d-sm-block"><a target="_blank" href="https://github.com/mrvautin/squido" class="nav-link btn-outline-secondary"><i class="lni lni-github-original"></i> Github</a></li>
       </ul>
     </header>
     <main class="container-fluid">
