--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -6,26 +6,26 @@
     {{#if meta.title}}
     <title>{{meta.title}}</title>
     <meta property="og:title" content="{{meta.title}}" />
-    <meta name="twitter:title" value="{{meta.title}}" />
-    <meta name="description" itemprop="description" content="{{meta.description}}" />
+    <meta name="twitter:title" content="{{meta.title}}" />
+    <meta name="description" content="{{meta.description}}" />
     <meta property="og:description" content="{{meta.description}}" />
-    <meta name="twitter:description" value="{{meta.description}}" />
+    <meta name="twitter:description" content="{{meta.description}}" />
     {{else}}
     {{#if page}}
     <title>{{config.name}} - Page: {{page}}</title>
     <meta property="og:title" content="{{config.name}} - Page: {{page}}" />
-    <meta name="twitter:title" value="{{config.name}} - Page: {{page}}" />
-    <meta name="description" itemprop="description" content="{{config.name}} - Page: {{page}}" />
+    <meta name="twitter:title" content="{{config.name}} - Page: {{page}}" />
+    <meta name="description" content="{{config.name}} - Page: {{page}}" />
     <meta property="og:description" content="{{config.name}} - Page: {{page}}" />
-    <meta name="twitter:description" value="{{config.name}} - Page: {{page}}" />
+    <meta name="twitter:description" content="{{config.name}} - Page: {{page}}" />
     {{/if}}
     {{#if tag}}
     <title>{{config.name}} - Tag: {{tag}}</title>
     <meta property="og:title" content="{{config.name}} - Tag: {{tag}}" />
-    <meta name="twitter:title" value="{{config.name}} - Tag: {{tag}}" />
-    <meta name="description" itemprop="description" content="{{config.name}} - Posts containing tag: {{tag}}" />
+    <meta name="twitter:title" content="{{config.name}} - Tag: {{tag}}" />
+    <meta name="description" content="{{config.name}} - Posts containing tag: {{tag}}" />
     <meta property="og:description" content="{{config.name}} - Posts containing tag: {{tag}}" />
-    <meta name="twitter:description" value="{{config.name}} - Posts containing tag: {{tag}}" />
+    <meta name="twitter:description" content="{{config.name}} - Posts containing tag: {{tag}}" />
     {{/if}}
     {{/if}}
     <link rel="canonical" href="{{meta.url}}" />
@@ -33,17 +33,17 @@
     <meta property="og:type" content="article" />
     <meta property="og:url" content="{{meta.url}}" />
     <meta property="og:site_name" content="{{config.name}}" />
-    <meta name="twitter:card" value="summary" />
-    <meta name="twitter:url" value="{{meta.url}}" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:url" content="{{meta.url}}" />
     {{#if meta.image}}
-    <meta name="twitter:image" value="{{meta.image}}" />
+    <meta name="twitter:image" content="{{meta.image}}" />
     <meta property="og:image" content="{{meta.image}}" />
     {{else}}
-    <meta name="twitter:image" value="{{config.baseUrl}}/content/images/squido-social.png" />
+    <meta name="twitter:image" content="{{config.baseUrl}}/content/images/squido-social.png" />
     <meta property="og:image" content="{{config.baseUrl}}/content/images/squido-social.png" />
     {{/if}}
     {{#if config.twitterHandle}}
-    <meta name="twitter:site" value="{{config.twitterHandle}}" />
+    <meta name="twitter:site" content="{{config.twitterHandle}}" />
     <meta name="twitter:creator" content="{{config.twitterHandle}}" />
     {{/if}}
     {{#if config.facebookApp}}
