--- a/source/tag.hbs
+++ b/source/tag.hbs
@@ -3,7 +3,7 @@
     <div class="position-sticky pt-3">
       <ul class="nav flex-column">
         <li class="nav-item">
-          <input type="search" class="form-control ds-input" id="search-input" placeholder="Search docs..." aria-label="Search docs for..." autocomplete="off" data-bd-docs-version="5.0" spellcheck="false" role="combobox" aria-autocomplete="list" aria-expanded="false" style="position: relative; vertical-align: top;">
+          <input type="text" class="form-control ds-input" id="search-input" placeholder="Search docs..." aria-label="Search docs for..." autocomplete="off" data-bd-docs-version="5.0" spellcheck="false" role="combobox" aria-autocomplete="list" aria-expanded="false" style="position: relative; vertical-align: top;">
           <ul id="search-results" class="list-group" style="z-index: 999; position: absolute; width: 100%;"></ul>
         </li>
         {{#each postList}}
