Fixing incorrect html

--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -90,8 +90,8 @@
         <li class="nav-item p-2 d-none d-sm-block"><a target="_blank" href="https://github.com/mrvautin/squido" class="nav-link btn-outline-secondary"><i class="lni lni-github-original"></i> Github</a></li>
       </ul>
     </header>
-    <main class="container-fluid">
+    <div class="container-fluid">
       {{{body}}}
-    </main>
+    </div>
   </body>
 </html>
