--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -21,11 +21,11 @@
     {{/if}}
     {{#if tag}}
     <title>{{config.name}} - Tag: {{tag}}</title>
-    <meta property="og:title" content="{{config.name}} - Tag: {{tag}}" />
-    <meta name="twitter:title" content="{{config.name}} - Tag: {{tag}}" />
-    <meta name="description" content="{{config.name}} - Posts containing tag: {{tag}}" />
-    <meta property="og:description" content="{{config.name}} - Posts containing tag: {{tag}}" />
-    <meta name="twitter:description" content="{{config.name}} - Posts containing tag: {{tag}}" />
+    <meta property="og:title" content="{{config.name}} - Posts containing the tag: {{tag}}" />
+    <meta name="twitter:title" content="{{config.name}} - Posts containing the tag: {{tag}}" />
+    <meta name="description" content="{{config.name}} - Posts containing the tag: {{tag}}" />
+    <meta property="og:description" content="{{config.name}} - Posts containing the tag: {{tag}}" />
+    <meta name="twitter:description" content="{{config.name}} - Posts containing the tag: {{tag}}" />
     {{/if}}
     {{/if}}
     <link rel="canonical" href="{{meta.url}}" />
