--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -4,9 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {{#if meta.title}}
-    <title>{{meta.title}}</title>
-    <meta property="og:title" content="{{meta.title}}" />
-    <meta name="twitter:title" content="{{meta.title}}" />
+    <title>squido documentation - {{meta.title}}</title>
+    <meta property="og:title" content="squido documentation - {{meta.title}}" />
+    <meta name="twitter:title" content="squido documentation - {{meta.title}}" />
     <meta name="description" content="{{meta.description}}" />
     <meta property="og:description" content="{{meta.description}}" />
     <meta name="twitter:description" content="{{meta.description}}" />
