--- a/source/content/stylesheets/style.css
+++ b/source/content/stylesheets/style.css
@@ -91,6 +91,29 @@ h1, h2, h3, h4{
     border-left-color: #FF96A9 !important;
 }
 
+@media (min-width: 992px){
+    .toc{
+        position: sticky;
+        top: 1rem;
+        right: 0;
+        z-index: 2;
+        height: calc(100vh - 7rem);
+        overflow-y: auto;   
+    }
+
+    .toc-heading{
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .toc ul {
+        border-top: 1px solid #dee2e6;
+        padding-top: 10px;
+        list-style: none;
+        padding-left: 0rem;
+    }
+}
+
 @media (min-width: 576px) {
     .brand{
         font-size: 2.8rem !important;
