--- a/source/post.hbs
+++ b/source/post.hbs
@@ -21,7 +21,12 @@
       </ul>
     </div>
   </nav>
+  {{!-- {{#if toc.length}} --}}
+  {{#ifCond (objLength toc) '>' 0}}
+  <main class="col-md-9 ms-sm-auto col-lg-8 mt-3 px-md-4">
+  {{else}}
   <main class="col-md-9 ms-sm-auto col-lg-10 mt-3 px-md-4">
+  {{/ifCond}}
     <h1>{{title}}</h1>
     {{{body}}}
     {{#if tags}}
@@ -35,4 +40,18 @@
     </div>
   {{/if}}
   </main>
+  {{#ifCond (objLength toc) '>' 0}}
+  <div class="toc mt-3 col-lg-2 d-none d-lg-block d-xl-block">
+    <div class="toc-heading">On this page</div>
+    <ul>
+    {{#each @root.toc}}
+      {{#each this}}
+        <li>
+          <a href="#{{this.id}}">{{this.text}}</a>
+        </li>
+      {{/each}}
+    {{/each}}
+    </ul>
+  </div>
+  {{/ifCond}}
 </div>
