--- a/source/tag.hbs
+++ b/source/tag.hbs
@@ -1,26 +1,5 @@
 <div class="row">
-  <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-    <div class="position-sticky pt-3">
-      <ul class="nav flex-column">
-        <li class="nav-item">
-          <input type="text" class="form-control ds-input" id="search-input" placeholder="Search docs..." aria-label="Search docs for..." autocomplete="off" data-bd-docs-version="5.0" spellcheck="false" role="combobox" aria-autocomplete="list" aria-expanded="false" style="position: relative; vertical-align: top;">
-          <ul id="search-results" class="list-group" style="z-index: 999; position: absolute; width: 100%;"></ul>
-        </li>
-        {{#each postList}}
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/{{this.permalink}}/">
-            {{this.title}}
-          </a>
-        </li>
-        {{/each}}
-        <li class="nav-item p-3" style="width: 120px;">
-          <a href="https://www.netlify.com">
-            <img src="/content/images/netlify-color-accent.svg" alt="Deploys by Netlify" />
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  {{> sidebar}}
   <main class="col-md-9 ms-sm-auto col-lg-10 mt-3 px-md-4">
     <h1>Tag: {{tag}}</h1>
     {{#each posts}}
