Fixed blog domains

--- a/source/layouts/layout.hbs
+++ b/source/layouts/layout.hbs
@@ -84,7 +84,7 @@
           </a>
         </li>
         <li class="nav-item p-2 d-none d-sm-block"><a href="/" class="nav-link btn-outline-secondary">Home</a></li>
-        <li class="nav-item p-2 d-none d-sm-block"><a href="https://blog.squido.org/" target="_blank" class="nav-link btn-outline-secondary">Blog</a></li>
+        <li class="nav-item p-2 d-none d-sm-block"><a href="https://squido-blog.markmoffat.com/" target="_blank" class="nav-link btn-outline-secondary">Blog</a></li>
         <li class="nav-item p-2 d-none d-sm-block"><a class="nav-link btn-outline-secondary" target="_blank" href="https://www.facebook.com/squido.org"><i class="lni lni-facebook-original"></i></a></li>
         <li class="nav-item p-2 d-none d-sm-block"><a class="nav-link btn-outline-secondary" target="_blank" href="https://twitter.com/squido_app"><i class="lni lni-twitter-filled"></i></a></li>
         <li class="nav-item p-2 d-none d-sm-block"><a target="_blank" href="https://github.com/mrvautin/squido" class="nav-link btn-outline-secondary"><i class="lni lni-github-original"></i> Github</a></li>
